--- a/src/app/question-form/question-form.component.html
+++ b/src/app/question-form/question-form.component.html
@@ -1,4 +1,20 @@
-<h1>Create your own trivia question!</h1>
+<h1>Your Trivia Questions</h1>
+
+<!-- Tab Navigation -->
+<div class="nav-section">
+  <ul class="nav nav-tabs mb-4 pb-2" id="ex1" role="tablist">
+    <li class="nav-item" role="presentation">
+      <a class="nav-link active" id="ex1-tab-1" data-mdb-toggle="tab" href="#ex1-tabs-1" role="tab"
+        aria-controls="ex1-tabs-1" aria-selected="true">Create</a>
+    </li>
+    <li class="nav-item" role="presentation">
+      <a class="nav-link" id="ex1-tab-2" data-mdb-toggle="tab" href="#ex1-tabs-2" role="tab"
+        aria-controls="ex1-tabs-2" aria-selected="false">Edit</a>
+    </li>
+  </ul>
+  </div>
+
+<!-- Custom Trivia Question Form -->
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
@@ -18,6 +34,7 @@
             </select>
           </div>
         </div>
+        <button class="btn btn-primary">Submit</button>
       </form>
     </div>
   </div>
