--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,13 @@
 <h1>Pikman!</h1>
+
+<form (ngSubmit)="onSubmit(signUpForm)" #signUpForm="ngForm">
+  <div>
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" ngModel required>
+  </div>
+  <div>
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password" ngModel required>
+  </div>
+  <button type="submit">Sign Up</button>
+</form>
