Auth service working

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <h1>Pikman!</h1>
 
+<!-- <h1>Register</h1>
+
 <form (ngSubmit)="onSubmit(signUpForm)" #signUpForm="ngForm">
   <div>
     <label for="email">Email:</label>
@@ -11,3 +13,17 @@
   </div>
   <button type="submit">Sign Up</button>
 </form>
+
+<h1>Login</h1>
+
+<form (ngSubmit)="onLogin(loginForm)" #loginForm="ngForm">
+  <div>
+    <label for="loginEmail">Email:</label>
+    <input type="email" id="loginEmail" name="loginEmail" ngModel required>
+  </div>
+  <div>
+    <label for="loginPassword">Password:</label>
+    <input type="password" id="loginPassword" name="loginPassword" ngModel required>
+  </div>
+  <button type="submit">Log In</button>
+</form> -->
