WIP trivia serv

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <h1>Pikman!</h1>
 
-<!-- <h1>Register</h1>
+<h1>Register</h1>
 
 <form (ngSubmit)="onSubmit(signUpForm)" #signUpForm="ngForm">
   <div>
@@ -26,4 +26,4 @@
     <input type="password" id="loginPassword" name="loginPassword" ngModel required>
   </div>
   <button type="submit">Log In</button>
-</form> -->
+</form>
