--- a/src/app/question-form/question-form.component.html
+++ b/src/app/question-form/question-form.component.html
@@ -1,41 +1,2 @@
-<h1>Your Trivia Questions</h1>
-
-<!-- Tab Navigation -->
-<div class="nav-section">
-  <ul class="nav nav-tabs mb-4 pb-2" id="ex1" role="tablist">
-    <li class="nav-item" role="presentation">
-      <a class="nav-link active" id="ex1-tab-1" data-mdb-toggle="tab" href="#ex1-tabs-1" role="tab"
-        aria-controls="ex1-tabs-1" aria-selected="true">Create</a>
-    </li>
-    <li class="nav-item" role="presentation">
-      <a class="nav-link" id="ex1-tab-2" data-mdb-toggle="tab" href="#ex1-tabs-2" role="tab"
-        aria-controls="ex1-tabs-2" aria-selected="false">Edit</a>
-    </li>
-  </ul>
-  </div>
-
-<!-- Custom Trivia Question Form -->
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-      <form>
-        <div id="trivia-quest-data">
-          <div class="form-group">
-            <label for="question">What is your question?</label>
-            <input type="text" id="question" class="form-control">
-          </div>
-      </div>
-        <div class="trivai-answer-data">
-          <div class="form-group">
-            <label for="answer">Select correct answer.</label>
-            <select name="answer" id="trivai-answer-data">
-             <option value="true">True</option>
-            <option value="false">False</option>
-            </select>
-          </div>
-        </div>
-        <button class="btn btn-primary">Submit</button>
-      </form>
-    </div>
-  </div>
-</div>
+<h1 class="">Your Trivia Questions:</h1>
+<app-mat-tab-q></app-mat-tab-q>
