--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,4 +5,5 @@
 --picton-blue: #3da9efff;
 --school-bus-yellow: #f7de1dff;
 --african-violet: #c183b5ff;
---atomic-tangerine: #fb934aff;}
+--atomic-tangerine: #fb934aff;
+}
