--- a/src/app/question-form/create-question-form/create-question-form.component.html
+++ b/src/app/question-form/create-question-form/create-question-form.component.html
@@ -1,24 +1,47 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-      <form>
+ <!-- Creating a question form -->
+      <form (ngSubmit)="onFormSubmit(templateFormRef)" #templateFormRef="ngForm">
         <div id="trivia-quest-data">
           <div class="form-group">
             <label for="question">What is your question?</label>
-            <input type="text" id="question" class="form-control">
+            <input type="text"
+            id="question"
+            class="form-control"
+            ngModel
+            #questionRef
+            name="question"
+            required>
+            <span class="help-block text-danger" *ngIf="!questionRef.valid && questionRef.touched">Please enter a valid question!</span>
           </div>
       </div>
-        <div class="trivai-answer-data">
+        <div class="trivia-answer-data">
           <div class="form-group">
-            <label for="answer">Select correct answer.</label>
-            <select name="answer" id="trivai-answer-data">
-             <option value="true">True</option>
+            <label for="answer">Select correct answer:</label>
+            <select
+            id="trivia-answer-data"
+            name="answer"
+            class="form-control"
+            #answerRef
+            required>
+            <option value="true">True</option>
             <option value="false">False</option>
-            </select>
+          </select>
+          <span class="help-block text-danger" *ngIf="!answerRef.valid && answerRef.touched">Please enter a valid question!</span>
           </div>
         </div>
-        <button class="btn btn-primary">Submit</button>
+        <button class="btn btn-primary" type="submit" [disabled]="!templateFormRef.valid">Submit</button>
       </form>
     </div>
   </div>
+<!-- Created Questions Display -->
+<!-- <div class="row mt-4" *ngIf="formHasBeenSubmitted">
+  <div class="col-xs-12">
+    <h3></h3>
+    <h4></h4>
+    <p></p>
+  </div>
 </div>
+</div>
+ -->
