--- a/src/app/question-form/edit-questions/edit-questions.component.html
+++ b/src/app/question-form/edit-questions/edit-questions.component.html
@@ -1,23 +1,36 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-      <form>
-        <div id="trivia-quest-data">
+      <form (ngSubmit)="onFormSubmit(templateFormRef)" #templateFormRef="ngForm">
+        <div id="edit-quest-data">
           <div class="form-group">
-            <label for="question">Edit you question:</label>
-            <input type="text" id="question" class="form-control">
+            <label for="edit-question">Edit you question:</label>
+            <input
+            type="text"
+            id="edit-question"
+            class="form-control"
+            ngModel
+            #editQuestionRef
+            name="edit-question">
+            <span class="help-block text-danger" *ngIf="!editQuestionRef.valid && editQuestionRef.touched">Please enter a valid question!</span>
           </div>
       </div>
-        <div class="trivai-answer-data">
+        <div class="edit-answer-data">
           <div class="form-group">
-            <label for="answer">Change correct answer:</label>
-            <select name="answer" id="trivai-answer-data">
+            <label for="edit-answer">Change correct answer:</label>
+            <select
+              id="edit-answer-data"
+              class="form-control"
+              ngModel
+              #editAnswerRef
+              name="edit-answer">
              <option value="true">True</option>
-            <option value="false">False</option>
+             <option value="false">False</option>
             </select>
+            <span class="help-block text-danger" *ngIf="!editAnswerRef.valid && editAnswerRef.touched">Please enter a valid question!</span>
           </div>
         </div>
-        <button class="btn btn-primary">Resubmit</button>
+        <button class="btn btn-primary" type="submit" [disabled]="!templateFormRef.valid">Resubmit</button>
       </form>
     </div>
   </div>
