Created login/signup component

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="text-center">
         <h5>Create an account today to start your streak.</h5>
-        <button class="btn btn-success" routerLink="#">Login</button>
+        <button class="btn btn-success" routerLink="/auth">Login</button>
     </div>
 </div>
 
