Andrew Updates to play-game-component Dec. 7th

--- a/src/app/play-game/play-game.component.html
+++ b/src/app/play-game/play-game.component.html
@@ -18,7 +18,7 @@
   </div>
 </main>
 <div class="d-flex justify-content-center align-items-end" style="margin-top: 30px;">
-  <h2 class="p-2" style="color: #F24822">Correct!/Wrong Answer!</h2>
+  <h2 class="p-2" style="color: #F24822">{{result}}</h2>
 </div>
 <div class="d-flex align-items-end flex-column" style="margin-top: 20px;">
   <h2 class="mt-auto p-2">Next Trivia Question --> </h2>
