Andrew N. progress on play-game page Dec. 9

--- a/src/app/play-game/play-game.component.html
+++ b/src/app/play-game/play-game.component.html
@@ -11,7 +11,7 @@
       <img src="https://picsum.photos/225/300" alt="placeholder image" height="150px" width="150px">
     </div>
     <div class="flex-grow-1 ms-3">
-      <span class="border border-2">
+      <span>
         <app-question></app-question>
       </span>
     </div>
