Created nav bar

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,7 +1,7 @@
 <div class="container flex-column mt-3 text-center">
         <div>
             <h1>Ready to expand your movie knowledge?</h1>            
-            <img src="../../assets/Images/Pikmin_species.jpg" alt="">
+            <img src="../../assets/Images/Logo.png" alt="">
     </div>
     <div class="text-center">
         <h5>Create an account today to start your streak.</h5>
