--- a/src/app/question-form/edit-questions/edit-questions.component.html
+++ b/src/app/question-form/edit-questions/edit-questions.component.html
@@ -46,4 +46,11 @@
       </form>
     </div>
   </div>
+<!-- Created Questions Display -->
+    <div class="row mt-4" *ngIf="questFormSubmitted">
+      <div class="col-xs-12">
+      <h2>Question: {{ questDetails.question }}</h2>
+      <h3>Answer: {{ questDetails.answer }}</h3>
+    </div>
+  </div>
 </div>
