Refactor code and remove unused files

--- a/src/app/play-game/play-game.component.html
+++ b/src/app/play-game/play-game.component.html
@@ -1,30 +1,27 @@
-<div class="main-container d-flex flex-column" style="width: 100%; height: 100dvh; margin-top: 40px; background-color: rgba(245, 39, 39, 0.25);">
-<div class="header d-flex justify-content-center ">
-  <h1 class="p-2">Movie Trivia -- Question #1!</h1>
-</div>
-<div class="d-flex justify-content-center">
- <hr width="90%" >
-</div>
-<main class="body-content d-flex">
-  <div class="d-flex ms-5">
-    <div class="flex-shrink-0">
-      <img src="https://picsum.photos/225/300" alt="placeholder image" height="150px" width="150px">
-    </div>
-    <div class="flex-grow-1 ms-3">
-      <span>
-        <app-question></app-question>
-      </span>
+<div class="main-container d-flex flex-column"
+    style="width: 100dwh; height: 100dvh; margin-top: 30px; background-color: rgba(245, 39, 39, 0.25);">
+  <div class="header d-flex justify-content-center ">
+    <h1 class="p-2">Movie Trivia -- Question #1!</h1>
+  </div>
+  <div class="d-flex justify-content-center">
+    <hr width="80%">
+  </div>
+  <div class="d-flex">
+    <div class="d-flex ms-5">
+      <div class="flex-shrink-0">
+        <img src="https://picsum.photos/225/300" alt="placeholder image" height="150px" width="150px">
+      </div>
+      <div class="flex-grow-1 ms-3">
+        <span>
+          <app-question></app-question>
+        </span>
+      </div>
     </div>
   </div>
-</main>
-<div class="d-flex justify-content-center align-items-end" style="margin-top: 30px;">
-  <h2 class="p-2" style="color: #F24822">{{result}}</h2>
+  <div class="d-flex justify-content-center align-items-end" style="margin-top: 30px;">
+    <h2 class="p-2" style="color: #F24822">{{result}}</h2>
+  </div>
+  <div class="d-flex align-items-end flex-column" style="margin-top: 20px;">
+    <h2 class="mt-auto p-2">Next Trivia Question --> </h2>
+  </div>
 </div>
-<div class="d-flex align-items-end flex-column" style="margin-top: 20px;">
-  <h2 class="mt-auto p-2">Next Trivia Question --> </h2>
-</div>
-</div>
-
-
-
-
