--- a/src/app/testing/testing.component.html
+++ b/src/app/testing/testing.component.html
@@ -1,8 +1,8 @@
-<button (click)="addQuestion()">Add Question</button>
+<!-- <button (click)="addQuestion()">Add Question</button>
 <button (click)="updateQuestion()">Update Question</button>
 <button (click)="deleteQuestion()">Delete Question</button>
 
-<div *ngFor="let question of questionList$ | async">
+<div *ngFor="let question of questionList | async">
   <p>{{ question.question }}</p>
   <p>{{ question.answer }}</p>
 </div>
@@ -16,60 +16,4 @@
 <div *ngIf="moviePosters.length > 0">
   <img [src]="'https://image.tmdb.org/t/p/w500' + moviePosters[0].poster_path" alt="Movie Poster" class="poster">
 </div>
-
-
-
-
-
-<!-- results
-:
-Array(7)
-0
-:
-adult
-:
-false
-backdrop_path
-:
-"/8ZTVqvKDQ8emSGUEMjsS4yHAwrp.jpg"
-genre_ids
-:
-(3) [28, 878, 12]
-id
-:
-27205
-original_language
-:
-"en"
-original_title
-:
-"Inception"
-overview
-:
-"Cobb, a skilled thief who commits corporate espionage by infiltrating the subconscious of his targets is offered a
-chance to regain his old life as payment for a task considered to be impossible: \"inception\", the implantation of
-another person's idea into a target's subconscious."
-popularity
-:
-147.321
-poster_path
-:
-"/oYuLEt3zVCKq57qu2F8dT7NIa6f.jpg"
-release_date
-:
-"2010-07-15"
-title
-:
-"Inception"
-video
-:
-false
-vote_average
-:
-8.366
-vote_count
-:
-34860
-[[Prototype]]
-:
-Object -->
+ -->
