--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,7 +13,7 @@
                         <a href="/play" class="nav-link">Play</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/questions" class="nav-link">Question Manager</a>
+                        <a href="/edit" class="nav-link">Question Manager</a>
                     </li>
                     <li class="nav-item">
                         <a href="/results" class="nav-link">Results</a>
