--- a/src/app/question-form/edit-questions/edit-questions.component.html
+++ b/src/app/question-form/edit-questions/edit-questions.component.html
@@ -1,45 +1,69 @@
 <!-- Created Questions Display -->
-<div class="row mb-3" *ngFor="let question of myQuestions">
-	<div class="col-md-12">
-		<a href="#" class="list-group-item clearfix">
-			<div class="float-left">
-				<h4 class="list-group-item-heading">{{ question.question }}</h4>
-				<p class="list-group-item-text mb-0">{{ question.answer }}</p>
-			</div>
-		</a>
-	</div>
+<div class="container">
+  <div class="row mt-4" *ngIf="!editFormSubmitted">
+    <div class="col-xs-12">
+      <div class="questionImported"
+      *ngFor="let question of questionList; let i = index">
+        <div class="card" id="{{ i }}" style = "padding: 5px">
+          <h2>Movie Title: {{ question.movieTitle }}</h2>
+          <h3>Question: {{ question.question }}</h3>
+          <h3>Answer: {{ question.answer }}</h3>
+          <div class="poster" style="float: right;">
+            <img
+              src= "{{ getPosterUrl(question.movieTitle) }}"
+              alt="Movie Poster"
+              style="width: 200px; height: 300px;"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 <div class="container">
   <div class="row" *ngIf="editFormSubmitted">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-      <form (ngSubmit)="onEditFormSubmit(templateFormRef)" #templateFormRef="ngForm">
+      <form
+        (ngSubmit)="onEditFormSubmit(templateFormRef)"
+        #templateFormRef="ngForm"
+      >
         <div id="edit-title">
           <div class="form-group">
             <label for="edit-question">Change movie title:</label>
             <input
-            type="text"
-            id="edit-title"
-            class="form-control"
-            ngModel
-            #editTitleRef
-            name="edit-title">
-            <span class="help-block text-danger" *ngIf="!editQuestionRef.valid && editQuestionRef.touched">Please enter a valid question!</span>
+              type="text"
+              id="edit-title"
+              class="form-control"
+              ngModel
+              #editTitleRef
+              name="edit-title"
+            />
+            <span
+              class="help-block text-danger"
+              *ngIf="!editQuestionRef.valid && editQuestionRef.touched"
+              >Please enter a valid question!</span
+            >
           </div>
-      </div>
+        </div>
         <div id="edit-quest-data">
           <div class="form-group">
             <label for="edit-question">Edit your question:</label>
             <input
-            type="text"
-            id="edit-question"
-            class="form-control"
-            ngModel
-            #editQuestionRef
-            name="edit-question">
-            <span class="help-block text-danger" *ngIf="!editQuestionRef.valid && editQuestionRef.touched">Please enter a valid question!</span>
+              type="text"
+              id="edit-question"
+              class="form-control"
+              ngModel
+              #editQuestionRef
+              name="edit-question"
+            />
+            <span
+              class="help-block text-danger"
+              *ngIf="!editQuestionRef.valid && editQuestionRef.touched"
+              >Please enter a valid question!</span
+            >
           </div>
-      </div>
+        </div>
         <div class="edit-answer-data">
           <div class="form-group">
             <label for="edit-answer">Change correct answer:</label>
@@ -48,22 +72,26 @@
               class="form-control"
               ngModel
               #editAnswerRef
-              name="edit-answer">
-             <option value="true">True</option>
-             <option value="false">False</option>
+              name="edit-answer"
+            >
+              <option value="true">True</option>
+              <option value="false">False</option>
             </select>
-            <span class="help-block text-danger" *ngIf="!editAnswerRef.valid && editAnswerRef.touched">Please enter a valid question!</span>
+            <span
+              class="help-block text-danger"
+              *ngIf="!editAnswerRef.valid && editAnswerRef.touched"
+              >Please enter a valid question!</span
+            >
           </div>
         </div>
-        <button class="btn btn-primary" type="submit" [disabled]="!templateFormRef.valid">Resubmit</button>
+        <button
+          class="btn btn-primary"
+          type="submit"
+          [disabled]="!templateFormRef.valid"
+        >
+          Resubmit
+        </button>
       </form>
-    </div>
-  </div>
-<!-- Created Questions Display -->
-    <div class="row mt-4" *ngIf="questFormSubmitted">
-      <div class="col-xs-12">
-<!--       <h2>Question: {{ questDetails.question }}</h2>
-      <h3>Answer: {{ questDetails.answer }}</h3> -->
     </div>
   </div>
 </div>
