--- a/src/app/result-page/result-page.component.html
+++ b/src/app/result-page/result-page.component.html
@@ -1,8 +1,8 @@
 <div class="container mt-3 text-center">
-    <h1>Congratulations!</h1>
-    <h3>You got #/# correct</h3>
-    <div class="">
-        <button class="btn btn-info" routerLink="/play">Take Another Quiz</button> | 
-        <button class="btn btn-info" routerLink="/questions">Go to Question Manager</button>
-    </div>
+  <h1>Congratulations!</h1>
+  <h3>You got {{ rightAnswers }}/{{ (rightAnswers + wrongAnswers) }} ({{ score }}%) correct</h3>
+  <div class="">
+    <button class="btn btn-info" routerLink="/play">Take Another Quiz</button> |
+    <button class="btn btn-info" routerLink="/questions">Go to Question Manager</button>
+  </div>
 </div>
