made it look pretty

--- a/src/app/question-form/question-form.component.html
+++ b/src/app/question-form/question-form.component.html
@@ -1,2 +1,7 @@
-<h1 class="jumbotron">Your Trivia Questions:</h1>
-<app-mat-tab-q></app-mat-tab-q>
+<div class="container">
+    <h1 class="jumbotron d-flex justify-content-center">Your Trivia Questions:</h1>
+    <div class="d-flex justify-content-center">
+        <hr width="80%">
+    </div>
+    <app-mat-tab-q></app-mat-tab-q>
+</div>
