--- a/src/app/question-form/edit-questions/edit-questions.component.html
+++ b/src/app/question-form/edit-questions/edit-questions.component.html
@@ -10,13 +10,7 @@
           <h2>Movie Title: {{ question.movieTitle }}</h2>
           <h3>Question: {{ question.question }}</h3>
           <h3>Answer: {{ question.answer }}</h3>
-          <div class="poster" style="float: right">
-            <img
-              src=""
-              alt="Movie Poster"
-              style="width: 200px; height: 300px"
-            />
-          </div>
+          <div class="poster" style="float: right"></div>
         </div>
       </div>
     </div>
