--- a/src/app/result-page/result-page.component.html
+++ b/src/app/result-page/result-page.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-3 text-center">
+<div id="results" class="container mt-3 text-center">
   <h1>Congratulations!</h1>
   <h3>You got {{ rightAnswers }}/{{ (rightAnswers + wrongAnswers) }} ({{ score }}%) correct</h3>
   <div class="">
