--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -78,7 +78,7 @@
               <div
                   class="d-flex justify-content-left ml-3 align-items-center"
                   style="margin-top: 30px">
-                <h2 class="p-2" style="color: #d4312fff">{{ result }}</h2>
+                <h2 *ngIf="isSubmitted" class="p-2" style="color: #d4312fff">{{ result }}</h2>
               </div>
             </form>
           </div>
@@ -96,7 +96,7 @@
         }}%) correct
       </h3>
       <div class="">
-        <button class="btn btn-info" routerLink="/play">
+        <button class="btn btn-info" (click)="reloadPlayRoute()">
           Take Another Quiz
         </button>
         |
