fix routing error on results page, add variable for # of Q's

--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -100,7 +100,7 @@
           Take Another Quiz
         </button>
         |
-        <button class="btn btn-info" routerLink="/questions">
+        <button class="btn btn-info" routerLink="/edit">
           Go to Question Manager
         </button>
       </div>
