--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,10 +11,10 @@
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a href="/play" class="nav-link" (click)="reloadPlayRoute()">Play</a>
+          <a class="nav-link" (click)="reloadPlayRoute()">Play</a>
         </li>
         <li class="nav-item">
-          <a href="/edit" class="nav-link">Question Manager</a>
+          <a class="nav-link" (click)="goToQManager()">Question Manager</a>
         </li>
         <li class="nav-item active">
           <a href="#" class="nav-link" (click)="Logout()">Logout</a>
