Refactor edit question functionality

--- a/src/app/question-form/edit-questions/edit-questions.component.html
+++ b/src/app/question-form/edit-questions/edit-questions.component.html
@@ -1,11 +1,11 @@
 <!-- Created Questions Display -->
 <div class="container">
-  <div class="row mt-4" *ngIf="!editFormSubmitted">
+  <div class="row mt-4" *ngIf="!displayEditForm">
     <div class="col-xs-12">
       <div
           class="questionImported"
           *ngFor="let question of questionList; let i = index"
-          (click)="onCardClick(question)">
+          (click)="onCardClick(question.id, question)">
         <div class="card" id="{{ i }}" style="padding: 5px">
           <h2>Movie Title: {{ question.movieTitle }}</h2>
           <h3>Question: {{ question.question }}</h3>
@@ -18,22 +18,23 @@
 </div>
 
 <div class="container">
-  <div class="row" *ngIf="editFormSubmitted">
+  <div class="row" *ngIf="displayEditForm">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <form
           (ngSubmit)="onEditFormSubmit(templateFormRef)"
           #templateFormRef="ngForm">
         <div id="edit-title">
           <div class="form-group">
+            <input type="hidden" [(ngModel)]="selectedCard.id" name="cardId" id="cardId">
             <label for="edit-question">Change movie title:</label>
             <input
                 type="text"
-                id="edit-title"
+                id="movieTitle"
                 class="form-control"
                 [(ngModel)]="selectedCard.movieTitle"
                 ngModel
                 #editTitleRef
-                name="edit-title" />
+                name="movieTitle" />
             <span
                 class="help-block text-danger"
                 *ngIf="!editQuestionRef.valid && editQuestionRef.touched">Please enter a valid question!</span>
@@ -44,12 +45,12 @@
             <label for="edit-question">Edit your question:</label>
             <input
                 type="text"
-                id="edit-question"
+                id="question"
                 class="form-control"
                 [(ngModel)]="selectedCard.question"
                 ngModel
                 #editQuestionRef
-                name="edit-question" />
+                name="question" />
             <span
                 class="help-block text-danger"
                 *ngIf="!editQuestionRef.valid && editQuestionRef.touched">Please enter a valid question!</span>
@@ -59,12 +60,12 @@
           <div class="form-group">
             <label for="edit-answer">Change correct answer:</label>
             <select
-                id="edit-answer-data"
+                id="answer"
                 class="form-control"
                 [(ngModel)]="selectedCard.answer"
                 ngModel
                 #editAnswerRef
-                name="edit-answer">
+                name="answer">
               <option value="true">True</option>
               <option value="false">False</option>
             </select>
