Refactor question form and edit questions component

--- a/src/app/question-form/edit-questions/edit-questions.component.html
+++ b/src/app/question-form/edit-questions/edit-questions.component.html
@@ -2,6 +2,7 @@
 <div class="container">
   <div class="row mt-4" *ngIf="!displayEditForm">
     <div class="col-xs-12">
+      <h1>{{ questionList.length }}</h1>
       <div
           class="questionImported"
           *ngFor="let question of questionList; let i = index"
