--- a/src/app/question-form/question-form.component.html
+++ b/src/app/question-form/question-form.component.html
@@ -1,7 +1,19 @@
 <div class="container">
-    <h1 class="jumbotron d-flex justify-content-center">Your Trivia Questions:</h1>
-    <div class="d-flex justify-content-center">
-        <hr width="80%">
-    </div>
-    <app-mat-tab-q></app-mat-tab-q>
+  <h1 class="jumbotron d-flex justify-content-center">
+    Your Trivia Questions:
+  </h1>
+  <div class="d-flex justify-content-center">
+    <hr width="80%" />
+  </div>
+  <app-mat-tab-q></app-mat-tab-q>
 </div>
+
+<!-- <div class="container">
+  <h1 class="jumbotron d-flex justify-content-center">
+    Your Trivia Questions:
+  </h1>
+  <div class="d-flex justify-content-center">
+    <hr width="80%" />
+  </div>
+  <app-mat-tab-q class="trivia-question"></app-mat-tab-q>
+</div> -->
