added transitions and spacing to play component

--- a/src/app/question-form/edit-questions/edit-questions.component.html
+++ b/src/app/question-form/edit-questions/edit-questions.component.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row mt-4" *ngIf="!displayEditForm">
     <div class="col-xs-12">
-      <h1>{{ questionList.length }} </h1>
+      <h1>{{ questionList.length }} Total Questions</h1>
       <div
         style="cursor: pointer"
         class="questionImported"
