--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,7 +16,7 @@
         <li class="nav-item">
           <a class="nav-link" (click)="goToQManager()">Question Manager</a>
         </li>
-        <li class="nav-item active">
+        <li class="nav-item active" *ngIf="isLoggedIn">
           <a href="#" class="nav-link" (click)="Logout()">Logout</a>
         </li>
       </ul>
